# mgwconf

./: .gitignore  Cargo.toml  Cross.toml  justfile  mgw.cer  playbook.yaml
.github/: rust-clippy.yml
.github/workflows/: ci.yml  release.yml  rust.yml
mgwconf-cli/: Cargo.toml
mgwconf-cli/src/: lib.rs
mgwconf-cli/src/app/: mod.rs
mgwconf-cli/src/command/: get_all.rs  get_api_client_credential.rs  get_business_application.rs  get_certificate.rs  get_profile.rs  get_proxy.rs  get_sag.rs  mod.rs  registry.rs
mgwconf-cli/src/commands/: mod.rs
mgwconf-cli/src/config/: mod.rs
mgwconf-cli/src/playbook/: error.rs  mod.rs
mgwconf-common/: Cargo.toml
mgwconf-common/src/: lib.rs
mgwconf-common/src/config/: mod.rs
mgwconf-common/src/model/: mod.rs
mgwconf-macros/: .gitignore  Cargo.toml
mgwconf-macros/src/: attributes.rs  lib.rs
mgwconf-macros/src/derive/: entity.rs  model.rs
mgwconf-network/: .gitignore  Cargo.toml  codegen.yml
mgwconf-network/api/configuration/: .openapi-generator-ignore  Cargo.toml  README.md
mgwconf-network/api/configuration/.openapi-generator/: FILES
mgwconf-network/api/configuration/src/: lib.rs
mgwconf-network/api/configuration/src/apis/: api_client_credentials_api.rs  api_gateway_info_api.rs  business_application_api.rs  certificate_api.rs  configuration.rs  forward_proxy_api.rs  mod.rs  profile_api.rs  sag_api.rs
mgwconf-network/api/configuration/src/models/: api_credentials_entity.rs  api_gateway_info_entity.rs  application_profile_entity.rs  business_application_entity.rs  certificate_entity.rs  environment.rs  error_code.rs  error_default_response.rs  forward_proxy_entity.rs  sag_entity.rs
mgwconf-network/src/: lib.rs
mgwconf-network/src/api/: mod.rs
mgwconf-network/src/api/configuration/: api_client_credentials_api.rs  api_gateway_info_api.rs  business_application_api.rs  certificate_api.rs  forward_proxy_api.rs  mod.rs  profile_api.rs  sag_api.rs
mgwconf-network/src/api/management/: configuration.rs  local_sign_api.rs  management_oas_repository_api.rs  management_sag_api.rs  mod.rs  verify_database_integrity_api.rs  verify_jars_signature_api.rs
mgwconf-network/src/api/monitoring/: application_information_api.rs  configuration.rs  health_check_api.rs  metrics_api.rs  mod.rs  requests_trace_api.rs
mgwconf-network/src/apis/configuration/: api_client_credentials_api.rs  api_gateway_info_api.rs  business_application_api.rs  certificate_api.rs  forward_proxy_api.rs  profile_api.rs  sag_api.rs
mgwconf-network/src/apis/management/: local_sign_api.rs  management_oas_repository_api.rs  management_sag_api.rs  verify_database_integrity_api.rs  verify_jars_signature_api.rs
mgwconf-network/src/apis/monitoring/: application_information_api.rs  health_check_api.rs  metrics_api.rs  requests_trace_api.rs
mgwconf-network/src/event/: mod.rs
mgwconf-network/src/handler/: api_client_credentials.rs  business_application.rs  cert.rs  forward_proxy.rs  mod.rs  profile.rs  sag.rs
mgwconf-network/src/model/: business_application.rs  certificate.rs  mod.rs  prelude.rs  profile.rs  sag.rs
mgwconf-network/src/model/configuration/: api_credentials_entity.rs  api_gateway_info_entity.rs  application_profile_entity.rs  business_application_entity.rs  certificate_entity.rs  environment.rs  error_code.rs  error_default_response.rs  forward_proxy_entity.rs  sag_entity.rs
mgwconf-network/src/model/management/: db_verification_entity.rs  error_code.rs  error_default_response.rs  jar_verification_entity.rs  local_sign_entity.rs  mod.rs  oas_repository.rs  updated_oas_info.rs
mgwconf-network/src/model/monitoring/: error_default_response.rs  metrics_list.rs  mod.rs
mgwconf-network/src/models/configuration/: api_credentials_entity.rs  application_profile_entity.rs  business_application_entity.rs  certificate_entity.rs  error_code.rs  error_default_response.rs  forward_proxy_entity.rs  mod.rs  sag_entity.rs
mgwconf-network/src/models/management/: error_code.rs  sag_entity.rs
mgwconf-network/src/models/monitoring/: error_default_response.rs  metrics_list.rs
mgwconf-network/src/utils/: mod.rs
mgwconf-network/templates/: lib.mustache  model.mustache
mgwconf-ui/: Cargo.toml
mgwconf-ui/src/: lib.rs
mgwconf-ui/src/app/: mod.rs
mgwconf-ui/src/app/state/: configuration.rs  mod.rs
mgwconf-ui/src/config/: mod.rs
mgwconf-ui/src/event/: events.rs  key.rs
mgwconf-ui/src/handler/: configuration.rs
mgwconf-ui/src/handlers/: configuration.rs  home.rs  mod.rs
mgwconf-ui/src/model/: prelude.rs
mgwconf-ui/src/ui/: mod.rs  prelude.rs
mgwconf-ui/src/ui/configuration/: mod.rs
mgwconf-ui/src/ui/fmt/: mod.rs
mgwconf-ui/src/ui/home/: mod.rs
mgwconf-ui/src/ui/utils/: mod.rs
mgwconf-vault/: Cargo.toml
mgwconf-vault/src/: error.rs  lib.rs  prompt.rs  store.rs
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/state/: configuration.rs  mod.rs
src/app/vault/: mod.rs
src/cli/: main.rs  mod.rs
src/config/: mod.rs
src/handlers/: configuration.rs  home.rs  mod.rs
src/network/: mod.rs
src/network/controller/: business_application.rs  certificate.rs  mod.rs  sag.rs
src/network/model/: business_application.rs  certificate.rs  mod.rs  prelude.rs  sag.rs
src/network/utils/: mod.rs
src/ui/: main.rs  mod.rs  prelude.rs
src/ui/configuration/: mod.rs
src/ui/home/: mod.rs
src/ui/utils/: mod.rs
vault/: vault.Configuration  vault.Encrypt  vault.Management  vault.Monitoring
