[package]
name = "mgwconf"
version = "0.1.0"
edition = "2021"
authors = ["Martin P."]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
mgwconf-macros = { path = "mgwconf-macros" }
mgwconf-network = { path = "mgwconf-network", features = ["ui"] }
mgwconf-cli = { path = "mgwconf-cli", optional = true }
mgwconf-ui = { path = "mgwconf-ui", optional = true }

tokio = { version = "1.21", features = ["full"] }
log = "0.4"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2" }

tui = { version = "0.19.0", features = [
    "crossterm",
], default-features = false, optional = true }
crossterm = { version = "0.26", optional = true }

[[bin]]
name = "mgwc"
bench = false
path = "src/main.rs"
required-features = ["cli"]

[[bin]]
name = "mgwc_ui"
bench = false
required-features = ["ui"]
path = "src/main.rs"

[features]
default = ["cli"]
ui = ["mgwconf-ui", "tui", "crossterm"]
cli = ["mgwconf-cli"]
