[package]
name = "mgwconf"
version = "0.1.0"
edition = "2021"
authors = ["Martin P."]

[workspace]
members = ["mgwconf-network", "mgwconf-cli", "mgwconf-ui"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
debug = 0
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
mgwconf-network = { path = "mgwconf-network", features = ["ui"] }
mgwconf-cli = { path = "mgwconf-cli", optional = true }
mgwconf-ui = { path = "mgwconf-ui", optional = true }

tokio = { version = "1.34.0", features = ["full"] }
log = "0.4"
clap = { version = "4.3", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2" }

[[bin]]
name = "mgwc"
bench = false
required-features = ["cli"]
path = "src/cli/main.rs"

[[bin]]
name = "mgwc_ui"
bench = false
required-features = ["ui"]
path = "src/ui/main.rs"

[features]
ui = ["mgwconf-ui"]
cli = ["mgwconf-cli"]
