[package]
name = "mgwconf-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = { version = "^0.1" }
anyhow = "1.0"
log = "0.4"
clap = "4.3"
lazy_static = "1"

mgwconf-network = { path = "../mgwconf-network", features = ["cli"] }
mgwconf-vault = { path = "../mgwconf-vault" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2" }
