[package]
name = "mgwconf-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mgwconf-vault = { path = "../mgwconf-vault" }

async-trait = "0.1.58"
anyhow = "1.0"
log4rs = "1.2.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.21", features = ["full"] }
