[package]
name = "mgwconf-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mgwconf-vault = { path = "../mgwconf-vault" }

tokio = { version = "1.35", features = ["full"] }
async-trait = { version = "^0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = { version = "1.0" }
anyhow = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features=false }
log = "0.4"
rand = "0.8.5"
uuid = { version = "1.6", features = ["serde", "v4"] }
url = "2.5"

[features]
default = ["cli"]
ui = []
cli = []
