[package]
name = "mgwconf-network"
edition = "2021"
version = "0.1.0"

[dependencies]
anyhow = { default-features = false, version = "1.0" }
log = "0.4"
rand = { default-features = false, version = "0.8" }
serde_derive = "^1.0"

[dependencies.async-trait]
version = "^0.1"
features = []

[dependencies.mgwconf-vault]
path = "../mgwconf-vault"
features = []

[dependencies.reqwest]
version = "0.11"
features = ["json", "rustls-tls"]
default-features = false

[dependencies.serde]
version = "1.0"
features = ["derive", "std"]
default-features = false

[dependencies.serde_json]
version = "1.0"
features = []

[dependencies.tokio]
version = "1.36"
features = ["full"]

[features]
cli = []
default = ["cli"]
ui = []
