[package]
name = "mgwconf-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mgwconf-macros = { path = "../mgwconf-macros" }
mgwconf-network = { path = "../mgwconf-network" }
mgwconf-vault = { path = "../mgwconf-vault" }

log = "0.4"
whoami = "1.2"
tui = { version = "0.19.0", features = ["crossterm"], default-features = false }
crossterm = "0.26"
anyhow = "1.0"
async-trait = { version = "^0.1" }
clap = { version = "4.0", features = ["derive"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2" }
