[package]
name = "mgwconf-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mgwconf-network = { path = "../mgwconf-network" }
mgwconf-vault = { path = "../mgwconf-vault" }

tokio = { version = "1.34.0", features = ["full"] }
log = "0.4"
whoami = "1.4"
ratatui = { version = "0.24.0", features = ["crossterm"], default-features = false }
crossterm = "0.27.0"
anyhow = "1.0"
async-trait = { version = "^0.1" }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = { version = "0.2" }
