[package]
name = "mgwconf-ui"
version = "0.1.0"
edition = "2021"

[dependencies]
mgwconf-network = { path = "../mgwconf-network", default-features = false }
mgwconf-vault = { path = "../mgwconf-vault" }

tokio = { version = "1.36", default-features = false }
log = "0.4"
whoami = { version = "1.5", default-features = false }
ratatui = { version = "0.26", features = [
    "crossterm",
], default-features = false }
crossterm = { default-features = false, version = "0.27" }
anyhow = { default-features = false, version = "1.0" }
async-trait = { version = "^0.1" }
clap = { version = "4.5", features = [
    "derive",
    "std",
], default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }

tracing = { default-features = false, version = "0.1" }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], default-features = false }
tracing-appender = { version = "0.2" }

[features]
store = ["mgwconf-vault/store"]
