[package]
name = "mgwconf-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
log = "0.4"
zeroize = { version = "1.7", features = ["zeroize_derive"] }
cbc = { version = "0.1.2", optional = true }
aes = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
rand = { version = "0.8.5", optional = true }
hex = { version = "0.4.3", optional = true }
rust-argon2 = { version = "2.1", optional = true }

[features]
default = ["prompt"]
store = [
    "dep:cbc",
    "dep:aes",
    "dep:rand",
    "dep:base64",
    "dep:hex",
    "dep:rust-argon2",
]
prompt = []
